layout/frontend.css
/* _______ Stylesheet for {__silva_version__} frontend _____________________
** _______ Silva users can insert their own frontend styles ______________
** _______ Styles modified here will affect the Silva preview  ___________
**
**  Instructions to set caching headers. Inside comments area to play nicer with CSS editors.
** <dtml-let root="get_root_url()" last_modified="_.DateTime()-14" expires="_.DateTime()+7">
** <dtml-call "REQUEST.RESPONSE.setHeader( 'Content-Type', 'text/css' )">
** <dtml-call "REQUEST.RESPONSE.setHeader( 'Last-Modified', last_modified.toZone('GMT').rfc822() )">
** <dtml-call "REQUEST.RESPONSE.setHeader( 'Cache-Control', 'max-age=36000, must-revalidate' )">
** <dtml-call "REQUEST.RESPONSE.setHeader( 'Expires', expires.toZone('GMT').rfc822() )" >
**
**
** _______ Selector groups _______
**
** silva frontend layout
** alignments
** typography
** silva specific typography
** silva list styles
** links
** silva table styles
** various table layouts
** subscription forms
** css2 selectors
*/

body {
  margin: 0;
  color: #2d374c;
  /* make an absolute path to the image to prevent duplicate caching */
  background-image: url(<dtml-var root>/globals/skyfade.gif); 
  background-repeat: repeat-x;
  background-color: #dde5ee;
  font: 70% Verdana, Helvetica, Arial, sans-serif;
}
</dtml-let>

/* ______________________________________________ silva frontend layout _____ */

div.header {
  margin: 2em 2.1em 0 0;  
}

div.header a.icon {
  display: block;
  float: left;
  width: 7em;
  text-align: center;
}

/* layout for the content area in the preview screen */
div.preview {
  margin: -1px 0 0 0;
  padding: 0.3em 1em 1em 1em;
  border: 1px solid #789;
  background-color: #e3ecf7;
}

/* defines the width of the text in the preview and public layout */
div.public {
  margin-left: 7em;
  padding-top: 2.3em;
  width: 504px; /* for IE5 */
}
/* this selector works only for standards compatible browsers like mozilla
** IE ignores this definition */
body>div.public {
  width: 45em;
}
/* preview width */
div.preview>div.public {
  width: 45em;
}


/* _______________________________________________________ alignments _____ */

.image-left {
  text-align: left;
}

.image-center {
  text-align: center;
}

.image-right {
  text-align: right;
}

.float-left {
  float: left;
  margin-right: 1em;
  clear: none;
}

.float-right {
  float: right;
  margin-left: 1em;
  clear: none;
}


/* _________________________________________________________ typography _____ */

h1, h2, h3, h4, h5, h6 {
  margin: 1em 0 0 0;
  color: #455885;
}

h2 {
  margin-top: 0.8em;
  margin-bottom: 0.7em;
  font-size: 160%;
}

h3 {
  margin-bottom: 0.6em;
  font-size: 145%;
}

h4 {
  margin-bottom: 0.5em;
  font-size: 120%;
}

h5 {
  margin-bottom: 0.2em;
  font-size: 110%;
}

h6 {
  margin-bottom: 0.1em;
  color: #676767;
  font-size: 105%;
}

h6.minor {
  color: #454545;
  font-size: 100%;
}

.subhead {
  color: #333767;
  font-weight: bold;  
  font-family: verdana, arial, helvetica, sans-serif;
  line-height: 1.6em;
} 

p {
  margin: 0.5em 0em;
  text-align: left;
}

ul {
  margin: 0.5em 0em;
  /* override default indent */
  padding-left: 1.4em; 
}

ol {
  margin: 0.5em 0em;
  /* override default indent */
  padding-left: 1.9em; 
}

dt {
  background: transparent;
  font-weight: bold;
}

dd {
  background: transparent;
  margin-left: 1.5em;
}

pre {
  padding: 0;
  border: none;
  color: #444466;
  background-color: transparent;
  font-size: 120%;
}


/* ________________________________________ silva specific typography _____ */

p.lead {
  font-weight: bold;
}

p.annotation {
  font-style: italic;
}

div.citation {
  margin: 1em 3em;
  padding: 0.4em 2em 1.2em 2em;
  border: 1px solid #426061;
  color: #426061;
  background-color: #f4f3db;
  font-size: 110%;
}

div.citation p {
  margin: 0.5em 0em;
}

div.citation p.author {
  margin-bottom: 0;
  font-size: 90%;
  font-weight: bold;
}

div.citation p.source {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 90%;
}


/* __________________________________________________ silva list styles _____ */

ul.disc {
  list-style-type: disc;
}
  
ul.square {
  list-style-type: square ! important;
} 

ul.circle {
  list-style-type: circle;
} 

ul.nobullet {    
  list-style-type: none;   
}

ol.decimal {
  list-style-type: decimal;
} 

ol.upper-roman {
  list-style-type: upper-roman;
}

ol.lower-roman {
  list-style-type: lower-roman;
}

ol.upper-alpha {
  list-style-type: upper-alpha;
}

ol.lower-alpha {
  list-style-type: lower-alpha;
}


/* ____________________________________________________________ links _____ */

span.breadcrumb a {
  text-decoration: none;
}  
span.breadcrumb a:hover {
  text-decoration: underline;
}  

/* highlighting index links */
/* keep this if you markup text with index elements, this overrides the highlighting in the editor */
a.index-element {
  background-color: transparent;
  text-decoration: none;
}

div.public a:link {
  color: #0000aa;
  text-decoration: underline;
}
div.public a:visited {
  color: #4a00b2;
  text-decoration: underline;
}
div.public a:active {
  color: #3399cc;
}
div.public a:hover {
  color: #0000ff;
  text-decoration: none;
}

a img {
  border: 0;
}
  
/* _________________________________________________ silva table styles _____ */

table.silvatable {
  empty-cells: show;
  border-collapse: collapse;
  margin-bottom: 1em;
}
table.silvatable tr {
  vertical-align: top;
} 
table.silvatable tr.rowheading {
  font-weight: bold;
} 
table.silvatable td {
  border-right: none ! important;
} 
table.silvatable th.align-left, table.silvatable td.align-left {
  text-align: left;
}
table.silvatable th.align-center, table.silvatable td.align-center {
  text-align: center;
}
table.silvatable th.align-right, table.silvatable td.align-right {
  text-align: right;
}

table.datagrid, table.plain, table.list, table.grid {
  width: 100%;
}

table.plain {
  border-style: none;
} 
table.plain td {
  border-right: none ! important;
}
 
table.list td {
  border-bottom: 1px solid #444444;
} 

table.list tr.rowheading td, table.list thead th {
  border-bottom: 2px solid #444444;
} 
  
table.grid td, table.grid thead th {
  border: 2px solid #444444;
  border-right: 2px solid #444444 ! important;
} 
  
table.datagrid td {
  border: 2px solid #444444;
  border-right: 2px solid #444444 ! important;
} 
table.datagrid tr.rowheading td {
  border-top-style: none;
  border-left-style: none;
  border-right-style: none ! important;  
} 

table.simple {
  border-style: none;
}

table.simple thead th {
  font-weight: normal;
}

td.even table td {
  border-right: none ! important;
}


/*___________________________________________ various table layouts _____ */ 

table.black_border td,
table.black1 td,
table.red td, 
table.green td {
  padding: 0 5px;
}

table.black_border { 
  border: 1px solid black;
}

table.black_border td { 
  border: 1px solid black;
}

table.black_border tr.odd td { 
  background-color: #c1c1c1; 
}

table.black1 tbody { 
  border-right: 1px solid black; 
}

table.black1 td {
  border: 1px solid black;
}

table.red { 
  border: 1px solid darkred;
}

table.red td {
  border: 1px solid darkred;
}

table.red tr.odd td {
  background-color: #d0bbbb;
}

table.green {
  border: 1px solid darkgreen;
}

table.green td {
  border: 1px solid darkgreen;
}

table.green tr.odd td {
  background-color: #b3c99c;
}

/* definitions for batching */
div.listingBar {
  width: 60em;
  margin: 2em 0;
}

div.listingBar .next {
  margin-left: 5em;
} 

div.listingBar .previous {
  margin-right: 5em;
}


/* ___________________________________________ subscription forms _______ */

div.subscriptionform, div.cancellationform {
  margin: 1.2em 0;
  padding: 0em 1em 0.7em 1em;
  border: 1px solid #788;
  background-color: #d9f2d2;
}

div.feedback {
  margin: 0.7em 0 0 0;
  padding: 0.2em 0.4em;
  border: 1px solid #788;
  color: #3c2d50;
  background-color: #ebf797;
}
div.feedback:first-letter {
  text-transform: capitalize;
}

span.warning {
 color: #aa0000;
}

div.backlink {
  margin-top: 1.5em;
}

input {
  padding: 0.1em;
  border: 1px solid #03956a;
  color: #333767;
  background: #e8f7ef;
  font: normal 100% verdana, helvetica, arial, sans-serif;
}

input.control {
  margin: 0.1em 0.2em;
  padding: 0 0.2em;
  border: 1px solid #557;
  color: #d9f3f1;
  background: #283365;
  font-size: 95%;
  font-weight: normal;
  cursor: pointer;
}


/*__________________________________________________ CSS2 selectors _____ */ 

acronym[title], abbr[title] {
  cursor:help;
}

h2 + h3 {
  margin-top: 0;
}

h3 + h4 {
  margin-top: 0;
}

h4 + h5 {
  margin-top: 0;
}

h5 + h6 {
  margin-top: 0;
}

h5 + p {
  margin-top: 0.3em;
}

h6 + p, h6.minor + p {
  margin-top: 0;
}

/* end cascade */

